concord_macros/tests/trybuild/fail/codegen_contract/incompatible_descriptor_abi.rs
const _: concord_core::__private::v1::MacroAbi<2> =
    concord_core::__private::v1::MACRO_ABI;

fn main() {}
