concord_macros/tests/trybuild/fail/codegen_contract/incompatible_descriptor_abi.stderr
error[E0308]: mismatched types
 --> tests/trybuild/fail/codegen_contract/incompatible_descriptor_abi.rs:2:5
  |
1 | const _: concord_core::__private::v1::MacroAbi<2> =
  |          ---------------------------------------- expected because of the type of the constant
2 |     concord_core::__private::v1::MACRO_ABI;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `2`, found `1`
  |
  = note: expected struct `concord_core::__private::v1::MacroAbi<2>`
             found struct `concord_core::__private::v1::MacroAbi<1>`
